# NEAT-pendulum

./: .gitignore  Application.cpp  Application.hpp  CMakeLists.txt  Cart_Pendulum.cpp  Cart_Pendulum.vcxproj  Cart_Pendulum.vcxproj.filters  ConnectionGene.hpp  Genome.hpp  IPendulum.hpp  LICENSE  Math.hpp  NEAT.cpp  NEAT.hpp  NEATController.cpp  NEATController.hpp  Node.cpp  Node.hpp  SinglePendulum.hpp  Speciator.hpp  build_release.bat  main.cpp
include/core/: Application.hpp
include/neat/: NEAT.hpp  NEATController.hpp  SimulationManager.hpp
include/physics/: AgentSimulation.hpp  DoublePendulum.hpp  IPendulum.hpp  SinglePendulum.hpp
include/ui/: TrainingHistory.hpp
include/utils/: FileDialog.hpp
src/: Application.cpp  DoublePendulum.cpp  FileDialog.cpp  NEAT.cpp  NEATController.cpp  SinglePendulum.cpp
x64/Debug/: Cart_Pendulum.ilk  vc145.idb
